[package]

	name = "jp-media-tool"
	version = "0.1.0"
	edition = "2021"

[dependencies]

	anyhow = "*"
	clap = { version = "*", features = [ "derive" ] }
	itertools = "*"
	paste = "*"
	serde = { version = "*", features = [ "derive" ] }
	serde_with = { version = "*", features = [ "macros" ] }
	serde_json = "*"
	tokio = { version = "*", features = [ "io-util", "macros", "net", "rt", "sync" ] }
