[package]

	name = "jp-media-tool"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Opinionated tools for maintaining a media library"
	license = "Apache-2.0"
	keywords = [
		"audio",
		"conversion",
		"encoding",
		"ffmpeg",
		"h265",
		"hevc",
		"matroska",
		"media",
		"mkv",
		"opus",
		"srt",
		"subtitle",
		"subtitles",
		"transcoding",
		"video",
		"x265",
	]
	categories = [
		"command-line-utilities",
		"encoding",
		"multimedia::encoding",
	]

[dependencies]

	anyhow = "*"
	clap = { version = "*", features = [ "derive" ] }
	itertools = "*"
	paste = "*"
	serde = { version = "*", features = [ "derive" ] }
	serde_with = { version = "*", features = [ "macros" ] }
	serde_json = "*"
	thiserror = "*"
	tokio = { version = "*", features = [ "io-util", "macros", "net", "rt", "sync" ] }
