[package]

	name = "jp-media-tool"
	version = "0.1.0"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2024"
	description = "Opinionated tools for managing video media"
	license = "Apache-2.0"
	keywords = [
		"ffmpeg",
		"h265",
		"hevc",
		"matroska",
		"media",
		"mkv",
		"opus",
		"transcoding",
	]
	categories = [
		"command-line-utilities",
		"encoding",
		"multimedia::encoding",
	]

[dependencies]

	anyhow = "*"
	clap = { version = "*", features = [ "derive" ] }
	itertools = "*"
	paste = "*"
	serde = { version = "*", features = [ "derive" ] }
	serde_with = { version = "*", features = [ "macros" ] }
	serde_json = "*"
	serde_yaml = "*"
	tempfile = "*"
	thiserror = "*"
	tokio = { version = "*", features = [ "io-util", "macros", "net", "rt", "sync" ] }
